@@ -4,4 +4,4 @@ RSModelFFGRVertex.cc RSModelFFGRVertex.h RSModelFFGRVertex.icc RSModelFFVGRVerte
 RSModelFFVGRVertex.h RSModelFFVGRVertex.icc RSModelSSGRVertex.cc RSModelSSGRVertex.h\
 RSModelSSGRVertex.icc RSModelVVGRVertex.cc RSModelVVGRVertex.h RSModelVVGRVertex.icc\
 RSModelVVVGRVertex.cc RSModelVVVGRVertex.h RSModelVVVGRVertex.icc
-HwRSModel_la_LDFLAGS = -module -version-info 3:0:0
+HwRSModel_la_LDFLAGS = -module -version-info 3:1:0
