@@ -20,4 +20,4 @@ SSWWHVertex.cc SSWWHVertex.h SSWWHVertex.icc SSWWHVertex.fh \
 SSWHHVertex.cc SSWHHVertex.h SSWHHVertex.icc SSWHHVertex.fh \
 SSHHHVertex.cc SSHHHVertex.h SSHHHVertex.icc SSHHHVertex.fh \
 SSHGGVertex.cc SSHGGVertex.h SSHGGVertex.icc SSHGGVertex.fh
-HwSusy_la_LDFLAGS = -module -version-info 1:0:0
+HwSusy_la_LDFLAGS = -module -version-info 2:0:1
