@@ -48,7 +48,7 @@ void MixingMatrix::adjustPhase(long id) {
 ostream & Herwig::operator<<(ostream & os,const MixingMatrix & mix) {
   for(unsigned int ix=0;ix<mix.size().first;++ix) {
     for(unsigned int iy=0;iy<mix.size().second;++iy) {
-      os << mix(ix,iy) << " ";
+      os << mix(ix,iy) << "\t";
     }
     os << "\n";
   }
