@@ -4,7 +4,7 @@ LINK = $(LIBTOOL) --tag=CXX --mode=link $(CXX) $(AM_CXXFLAGS) $(CXXFLAGS) \
 
 pkglib_LTLIBRARIES = libHerwig.la
 libHerwig_la_SOURCES =
-libHerwig_la_LDFLAGS = -version-info 4:1:0 -export-dynamic 
+libHerwig_la_LDFLAGS = -version-info 4:2:0 -export-dynamic 
 libHerwig_la_LDFLAGS += $(THEPEGLDFLAGS)
 libHerwig_la_LIBADD = \
 $(top_builddir)/Hadronization/libHwHadronization.la \
